# quacry

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  main.cpp  quasicrystal.cpp  quasicrystal.h  quasicrystals_console.cpp  quasicrystals_console.h  quasicrystals_examples.cpp  quasicrystals_examples.h  quasicrystals_module.cpp  quasicrystals_module.h  quasicrystals_pointset.cpp  quasicrystals_pointset.h  quasicrystals_scene.cpp  quasicrystals_scene.h  quasicrystals_sidebar.cpp  quasicrystals_sidebar.h  quasicrystalscene.cpp  quasicrystalscene.h
demo_shots/: am_shear2480.mov  am_shear480.mov
shaders/: edges.geom.glsl  edges23.geom.glsl  inside_polygon.vert.glsl  inside_polygon_window.vert.glsl  inside_polygon_with_edges.vert.glsl  passthrough.frag.glsl  passthrough.vert.glsl  points.frag.glsl  points.geom.glsl  points.vert.glsl  points23.geom.glsl  points23.vert.glsl  points23mat5.geom.glsl  renderToTexture.frag.glsl  shape.frag.glsl  shape.vert.glsl  windowblock.vert.glsl
src/: main.cpp  old_quacry.cpp  old_scene.cpp  quasicrystal.cpp  quasicrystal.h  quasicrystals_console.cpp  quasicrystals_console.h  quasicrystals_examples.cpp  quasicrystals_examples.h  quasicrystals_guimathcontrol.cpp  quasicrystals_guimathcontrol.h  quasicrystals_module.cpp  quasicrystals_module.h  quasicrystals_physical_window.cpp  quasicrystals_physical_window.h  quasicrystals_pointset.cpp  quasicrystals_pointset.h  quasicrystals_scene.cpp  quasicrystals_scene.h  quasicrystals_sidebar.cpp  quasicrystals_sidebar.h
src/examples/: ammannbeenker.cpp  ammannbeenker.h  penrose.cpp  penrose.h  quasi23.cpp  quasi23.h
src/math/: LLL.h  hull.cpp  hull.h  lattice.cpp  lattice.h  minkowski_embedding.cpp  minkowski_embedding.h  penrose.cpp  penrose.h  quasi_math.cpp  quasi_math.h  sl.cpp  sl.h
src/math/test/: CMakeLists.txt  LLLtest.cpp
src/test/: convex_hull_test.h
